layout issues

--- a/src/sass/light-theme/channel-settings.scss
+++ b/src/sass/light-theme/channel-settings.scss
@@ -3,7 +3,6 @@
 // large and extra large screens
 
 .channel-settings {
-  margin-top: 1rem;
   .content {
     display: flex;
     justify-content: space-between;
@@ -11,7 +10,7 @@
     margin-top: 2rem;
     padding: 2rem;
     background: $white;
-    .action-btns{
+    .action-btns {
       display: grid !important;
       height: 25vh !important;
     }
